Prevent tags from wrapping within row

--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,8 @@ input[type="text"], textarea {
 .cover {
     background-size: cover;
 }
+
+.overflow-auto-horizontal {
+    overflow: auto;
+    overflow-y: hidden;
+}
